Updating the repository to a state where we have some tests. Not good tests but simple curl commands to run against the application that is stood up with docker-compose.
